# MovieLibrary

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  justfile  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 20dc5a56d190_create_initial_tables.py  346061ba5154_change_rating_to_float.py  a60a7d4892ab_add_gin_index_to_films_title.py  ae1073922c14_add_type_column_to_films.py  b47c34e44e60_create_users_table.py  dbfd26b9c9d4_add_gin_index_to_films_title_end_pg_trgm.py
backup/: backup.sql  backup_movie.sql  backup_movies.sql
movielibrary/: app.py  auth_utils.py  database.py  main.py  send_email.py  sessions_utils.py
movielibrary/models/: __init__.py  associations.py  country.py  enum.py  film.py  genre.py  user.py
movielibrary/routers/: film.py  films.py  filters.py  homepage.py  pages.py
movielibrary/schemas/: country.py  film.py  genre.py  user.py
movielibrary/static/: styles.css
movielibrary/static/css/: styles.css
movielibrary/templates/: account.html  base.html  create.html  film_details.html  index.html  login.html  register.html
telegrambot/: Dockerfile  main.py  pyproject.toml
tests/: test_film_schema.py
